Create [SocialSignInButton] to handle mutiple social signins

--- a/assets/langs/en.json
+++ b/assets/langs/en.json
@@ -8,6 +8,7 @@
   "FORGOT_PW": "Forgot password?",
   "NAVIGATE": "Navigate to %{name}",
   "CHANGE_THEME": "Change theme",
+  "SIGN_IN_WITH_GOOGLE": "Sign in with Google",
   "SIGN_IN_WITH_APPLE": "Sign in with Apple",
   "SIGN_IN_WITH_FACEBOOK": "Sign in with Facebook",
   "AGREEMENT1": "We consider that you agree with ",
